Use native scrollbar for DenseLayout mainCol to reduce jank; various DenseLayout fixes.

--- a/client/styles/layouts/_denseLayout.scss
+++ b/client/styles/layouts/_denseLayout.scss
@@ -1,19 +1,25 @@
 .denseLayout {
   display: flex;
 
-  height: calc(100vh - 64px);
+  width: 100vw;
+  height: calc(100vh - #{$top-nav-height});
 
-  overflow: hidden;
+  overflow-x: hidden;
 
   background-color: $fg-color;
 
   .leftCol {
     @include shadow2;
 
+    position: fixed;
+
     width: 20%;
+    height: calc(100vh - #{$top-nav-height});
   }
 
   .mainCol {
+    margin-left: calc(20% + 2px);
+
     width: 80%;
   }
 
@@ -30,6 +36,10 @@
     position: absolute;
     right: 12px;
     top: 12px;
+  }
+
+  header {
+    position: relative;
   }
 
   .messageForm {
@@ -68,12 +78,13 @@
     padding: 0;
 
 		width: 100vw;
-		height: calc(100vh - #{$top-nav-height});
 
     background-color: $fg-color;
   }
 
   .denseLayout .mainCol {
+    margin-left: 0;
+
     width: 100vw;
   }
 
